<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HelpFragment"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:src="@drawable/close"
        />
    
    <TextView
        android:id="@+id/receiptsTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:text="@string/receipts"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="30sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/receipts"
        android:layout_width="match_parent"
        android:layout_height="200dp"

        android:text="@string/receipts_help"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/receiptsTitle"
        app:layout_constraintLeft_toLeftOf="@id/receiptsTitle"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        />

    <TextView
        android:id="@+id/categoriesTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:text="@string/categories"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="30sp"

        app:layout_constraintTop_toBottomOf="@id/receipts"
        app:layout_constraintLeft_toLeftOf="@id/receipts"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

    <TextView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:text="@string/categories_help"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/categoriesTitle"
        app:layout_constraintLeft_toLeftOf="@id/categoriesTitle"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        />

    <TextView
        android:id="@+id/incomeTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:text="@string/income"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="30sp"

        app:layout_constraintTop_toBottomOf="@id/categories"
        app:layout_constraintLeft_toLeftOf="@id/categories"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

    <TextView
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:text="@string/income_help"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/incomeTitle"
        app:layout_constraintLeft_toLeftOf="@id/incomeTitle"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        />

    <TextView
        android:id="@+id/expensesTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:text="@string/expenses"
        android:fontFamily="@font/montserrat_extrabold"
        android:textSize="30sp"

        app:layout_constraintTop_toBottomOf="@id/income"
        app:layout_constraintLeft_toLeftOf="@id/income"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        />

    <TextView
        android:id="@+id/expenses"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:text="@string/expenses_help"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@id/expensesTitle"
        app:layout_constraintLeft_toLeftOf="@id/expensesTitle"

        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>