<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TransactionsFragment"
    android:background="@color/black">

    <Button
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black_tonal1"

        android:text="@string/income"
        android:textColor="@color/white"
        android:textSize="25dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/expenses"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/black_tonal1"

        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="25dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/income"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="30dp"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/timeBoundaries"
        app:singleSelection="true"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:checkedChip="@+id/lastWeek"

        app:layout_constraintBottom_toTopOf="@id/pieChart">

        <com.google.android.material.chip.Chip
            android:id="@+id/lastWeek"
            style="@style/Widget.Material3.Chip.Filter"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/last_week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lastMonth"
            style="@style/Widget.Material3.Chip.Filter"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/last_month" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lastYear"
            style="@style/Widget.Material3.Chip.Filter"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/last_year" />

        <com.google.android.material.chip.Chip
            android:id="@+id/allTime"
            style="@style/Widget.Material3.Chip.Filter"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/all_time" />



    </com.google.android.material.chip.ChipGroup>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="200dp"
        />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        app:layout_constraintTop_toBottomOf="@id/pieChart"
        />

</androidx.constraintlayout.widget.ConstraintLayout>