<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReceiptCreatorFragment"
    android:background="@color/black">

    <ImageView
        android:id="@+id/image"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_marginTop="80dp"

        android:src="@drawable/add"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/addImage"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_marginTop="80dp"

        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/goBack"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:src="@drawable/left"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/recipient"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/recipient"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/amount"
        android:layout_width="150dp"
        android:layout_height="48dp"

        android:textSize="24sp"
        android:hint="@string/amount"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/recipient"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/time"
        android:layout_width="125dp"
        android:layout_height="40dp"

        android:layout_marginTop="8dp"

        android:textSize="20dp"
        android:hint="@string/time"
        android:textColorHint="@color/grey"
        android:gravity="center"

        android:textColor="@color/grey"

        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintRight_toLeftOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/date"
        android:layout_width="125dp"
        android:layout_height="40dp"

        android:layout_marginTop="8dp"

        android:textSize="20dp"
        android:hint="@string/date"
        android:textColorHint="@color/grey"
        android:gravity="center"

        android:textColor="@color/grey"

        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintLeft_toRightOf="@id/time"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/category"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/category"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:backgroundTint="@color/black_tonal1"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:cardCornerRadius="12dp"

        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"

            android:layout_marginLeft="5dp"

            android:layout_marginTop="8dp"
            android:src="@drawable/add"

            app:tint="@color/green" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"

            android:textSize="25sp"
            android:text="@string/create_receipt"
            android:textColor="@color/green"
            android:gravity="start|center"

            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>