<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/goBack"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"

        android:src="@drawable/left"

        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:scaleType="fitCenter"
        />

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        android:fontFamily="@font/montserrat_extrabold"

        app:layout_constraintTop_toTopOf="parent"

        android:gravity="center"
        android:text="Gilded (no tinc logo no soc un disenyador grafic :( )"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/username"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/password"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:backgroundTint="@color/black_tonal1"

        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"

        app:layout_constraintTop_toBottomOf="@id/password"

        android:text="@string/signin"
        android:textSize="25sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>