<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FilterFragment"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:background="@android:color/transparent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:src="@drawable/close"
        />

    <CheckBox
        android:id="@+id/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/income"
        android:textColor="@color/white"
        android:textSize="30dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/expenses"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginTop="100dp"
        />

    <CheckBox
        android:id="@+id/expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/expenses"
        android:textColor="@color/white"
        android:textSize="30dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/income"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="100dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:backgroundTint="@color/black_tonal1"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:cardCornerRadius="12dp"

        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"

            android:layout_marginLeft="5dp"

            android:layout_marginTop="8dp"
            android:src="@drawable/delete"

            app:tint="@color/red" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"

            android:textSize="25sp"
            android:text="@string/reset_filter"
            android:textColor="@color/red"
            android:gravity="start|center"

            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"

            app:layout_constraintTop_toBottomOf="@id/recipient"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.cardview.widget.CardView>

    <Spinner
        android:id="@+id/filteredCategory"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black_tonal1"

        android:backgroundTint="@color/black_tonal1"

        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="40dp"

        android:popupBackground="@color/black_tonal1" />

</androidx.constraintlayout.widget.ConstraintLayout>