<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CategoryCreatorFragment"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/image"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_marginTop="80dp"

        android:background="@android:color/transparent"

        android:src="@drawable/add"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:scaleType="fitCenter"

        android:elevation="3dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/color"
        android:layout_width="90dp"
        android:layout_height="90dp"

        app:cardCornerRadius="60dp"
        app:cardBackgroundColor="@color/black_tonal1"

        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/goBack"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:background="@android:color/transparent"

        android:src="@drawable/left"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:layout_marginTop="8dp"

        android:textSize="24sp"
        android:hint="@string/category"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@id/color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/pickColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:backgroundTint="@color/black_tonal1"

        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"

        app:layout_constraintTop_toBottomOf="@id/name"

        android:text="@string/pick_color"
        android:textSize="25sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:backgroundTint="@color/black_tonal1"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        app:cardCornerRadius="12dp"

        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"

            android:layout_marginLeft="5dp"

            android:layout_marginTop="8dp"
            android:src="@drawable/add"

            app:tint="@color/green" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"

            android:textSize="25sp"
            android:text="@string/create_category"
            android:textColor="@color/green"
            android:gravity="start|center"

            android:layout_marginTop="5dp"
            android:layout_marginLeft="45dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>